[package]
name = "tla-btor2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "BTOR2 format parser and IR for hardware model checking"
readme.workspace = true

[dependencies]
rustc-hash = { workspace = true }
thiserror = { workspace = true }
z4-chc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "hwmcc_parse"
harness = false

[lints]
workspace = true
