# tla-bytes — verbatim fork of bytes 1.11.1
#
# Source: https://github.com/tokio-rs/bytes (MIT)
# Forked 2026-04-19 as part of the TLA2 Wave 9 0-external-dep posture (Part of #4250).
# Preserves upstream API: `use bytes::{Bytes, BytesMut, Buf, BufMut, ...}`.
#
# Package `name` stays "bytes" so `[patch.crates-io]` applies to ALL
# transitive graph consumers (tokio, tower, tower-lsp, h2, hyper, etc.)
# — same pattern as tla-indexmap, tla-hash-fx, tla-rowan. The workspace
# directory name "tla-bytes" marks it as the TLA2 fork.
[package]

name = "bytes"
# When releasing to crates.io:
# - Update CHANGELOG.md.
# - Create "v1.x.y" git tag.
version = "1.11.1"
edition = "2021"
rust-version = "1.57"
license = "MIT"
authors = [
    "Andrew Yates <ayates@dropbox.com>",
    "Carl Lerche <me@carllerche.com>",
    "Sean McArthur <sean@seanmonstar.com>",
]
description = "TLA2 fork of the bytes crate — types and traits for working with bytes. Verbatim fork of tokio-rs/bytes at v1.11.1, re-licensed under the MIT terms of the upstream project."
repository = "https://github.com/andrewdyates/tla2"
readme = "README.md"
keywords = ["buffers", "zero-copy", "io"]
categories = ["network-programming", "data-structures"]
include = ["CHANGELOG.md", "LICENSE", "README.md", "SECURITY.md", "Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "clippy.toml"]

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0.60", optional = true, default-features = false, features = ["alloc"] }
# Use portable-atomic crate to support platforms without atomic CAS.
# See "no_std support" section in readme for more information.
#
# Enable require-cas feature to provide a better error message if the end user forgets to use the cfg or feature.
extra-platforms = { package = "portable-atomic", version = "1.3", optional = true, default-features = false, features = ["require-cas"] }

[dev-dependencies]
serde_test = "1.0"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(loom)',
] }
