[package]
name = "tla-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TLA2 command line interface"
readme.workspace = true

[features]
default = ["mimalloc"]  # JIT removed from default: #4035 icache pollution causes 11-17% regression
z4 = ["tla-check/z4", "dep:tla-btor2", "dep:tla-aiger"]
# LLVM2 native backend — forwards to tla-check/llvm2. Activates `--backend llvm2`
# on the `tla2 check` command (Part of #4251 Stream 6.2). Without this feature,
# `--backend llvm2` emits a `backend_unavailable` JSON sentinel and exits 3.
# Part of #4251 Wave 12 7e finalizer: `jit` forwarder feature removed.
llvm2 = ["tla-check/llvm2"]
memory-stats = ["tla-check/memory-stats"]
dhat-heap = ["dep:dhat"]
mimalloc = ["dep:mimalloc"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
chrono = { version = "0.4" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
toml = { workspace = true }
libc = "0.2"
sha2 = "0.10"
tokio = { workspace = true }
tla-core = { path = "../tla-core" }
tla-tir = { path = "../tla-tir" }
tla-check = { path = "../tla-check" }
tla-value = { path = "../tla-value" }
tla-codegen = { path = "../tla-codegen" }
tla-lsp = { path = "../tla-lsp" }
tla-petri = { path = "../tla-petri" }
tla-concurrent = { path = "../tla-concurrent" }
rustc-hash = { workspace = true }
tla-aiger = { path = "../tla-aiger", optional = true }
tla-btor2 = { path = "../tla-btor2", optional = true }
# LLVM2 on-disk compilation cache (design doc §7). The `tla2 cache` subcommand
# wraps `tla_llvm2::artifact_cache` so users can inspect and clear cached
# artifacts at `~/.cache/tla2/compiled/`.
tla-llvm2 = { path = "../tla-llvm2" }
notify = { workspace = true }
tempfile = { workspace = true }
dhat = { version = "0.3", optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
ntest = "0.9"
num-bigint = { workspace = true }

[[bin]]
name = "tla"
path = "src/bin/tla.rs"

[[bin]]
name = "tla2"
path = "src/main.rs"

[lints]
workspace = true
