[package]
name = "tla-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TLA2 Rust code generator from TLA+ specifications"
readme.workspace = true

[dependencies]
tla-core = { path = "../tla-core" }
tla-tir = { path = "../tla-tir" }
tla-runtime = { path = "../tla-runtime" }
tla-value = { path = "../tla-value" }
serde.workspace = true
thiserror.workspace = true
stacker.workspace = true

[lints]
workspace = true

[dev-dependencies]
ntest = "0.9"
insta = "1.34"
criterion.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "bcp_benchmark"
harness = false
