[package]
name = "tla-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core TLA+ parser, AST, semantic analysis, and evaluation"
readme.workspace = true

[dependencies]
# Parsing
logos = { workspace = true }
rowan = { workspace = true }

# Data structures
indexmap = { workspace = true }
rustc-hash = { workspace = true }
im = { workspace = true, optional = true }

# Numbers
num-bigint = { workspace = true }
num-traits = { workspace = true }

# Errors
thiserror = { workspace = true }
ariadne = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Threading
parking_lot = { workspace = true }

[dev-dependencies]
ntest = "0.9"
proptest = { workspace = true }
insta = { workspace = true }
tempfile = "3.10"

[features]
default = []
im = ["dep:im"]

[lints]
workspace = true
